# unmanned_vehicle_ros_repo

./: README.md
unmanned_vehicle_ros_repo/: README.md
unmanned_vehicle_ros_repo/launch/: display_unmanned_vehicle.launch  navigation.launch  object_detection.launch
unmanned_vehicle_ros_repo/src/navigation/: CMakeLists.txt  package.xml
unmanned_vehicle_ros_repo/src/navigation/src/: path_planner.py
unmanned_vehicle_ros_repo/src/object_detection/: CMakeLists.txt  package.xml
unmanned_vehicle_ros_repo/src/object_detection/src/: object_detector.py
unmanned_vehicle_ros_repo/src/robot_description/: CMakeLists.txt  package.xml
unmanned_vehicle_ros_repo/src/robot_description/rviz/: unmanned_vehicle.rviz
unmanned_vehicle_ros_repo/src/robot_description/urdf/: unmanned_vehicle.xacro
