<?xml version="1.0"?>
<package format="2">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>


